RESOLVED FIXED 265396
Fix keyboard scrolling after 269941@main
https://bugs.webkit.org/show_bug.cgi?id=265396
Summary Fix keyboard scrolling after 269941@main
Alex Christensen
Reported 2023-11-27 11:51:47 PST
Attachments
Alex Christensen
Comment 1 2023-11-27 11:53:58 PST
EWS
Comment 2 2023-11-27 12:14:11 PST
Committed 271160@main (07f2e6aa57a5): <https://commits.webkit.org/271160@main> Reviewed commits have been landed. Closing PR #20945 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.